--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = [
     "ipykernel>=6.29.5",
     "mcp[cli]>=1.2.1",
     "pydantic>=2.10.6",
+    "pytest>=8.3.4",
+    "pytest-asyncio>=0.25.3",
     "tabulate>=0.9.0",
     "yfinance[nospam]>=0.2.54",
 ]
