--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,11 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "brave-search-python-client>=0.2.22",
-    "ipykernel>=6.29.5",
     "mcp[cli]>=1.2.1",
     "pydantic>=2.10.6",
-    "pytest>=8.3.4",
-    "pytest-asyncio>=0.25.3",
+    "pyrate-limiter>=2.10.0",
+    "requests-cache>=1.2.1",
+    "requests-ratelimiter>=0.7.0",
     "tabulate>=0.9.0",
     "yfinance[nospam]>=0.2.54",
 ]
@@ -27,7 +27,7 @@ classifiers = [
 ]
 
 [project.scripts]
-investor-agent = "src.investor_agent.server:main"
+investor-agent = "src.investor_agent.server:mcp.run"
 
 [build-system]
 requires = ["hatchling"]
