--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "investor-agent"
-version = "0.1.5"
+version = "0.1.6"
 description = "A Model Context Protocol server for an investor agent"
 readme = "README.md"
 requires-python = ">=3.12"
@@ -10,6 +10,7 @@ dependencies = [
     "pyrate-limiter>=2.10.0",
     "requests-cache>=1.2.1",
     "requests-ratelimiter>=0.7.0",
+    "ta-lib>=0.6.3",
     "tabulate>=0.9.0",
     "yfinance[nospam]>=0.2.54",
 ]
