--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,4 +36,4 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-sources = ["src"]
+packages = ["src/investor_agent"]
