--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "investor-agent"
-version = "0.2.0"
+version = "0.2.1"
 description = "A Model Context Protocol server for an investor agent"
 readme = "README.md"
 requires-python = ">=3.12"
@@ -29,11 +29,11 @@ classifiers = [
 ta = ["ta-lib>=0.6.3"]
 
 [project.scripts]
-investor-agent = "investor_agent.server:main"
+investor-agent = "src.investor_agent.server:main"
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/investor_agent"]
+packages = ["src"]
