--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "mcp[cli]>=1.9.4",
     "pandas>=2.0.0",
     "pyrate-limiter>=2.10.0",
+    "pytrends>=4.9.2",
     "requests-cache>=1.2.1",
     "requests-ratelimiter>=0.7.0",
     "tabulate>=0.9.0",
