--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,15 +5,18 @@ description = "A Model Context Protocol server for an investor agent"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "beautifulsoup4>=4.13.4",
     "httpx>=0.28.1",
     "mcp[cli]>=1.9.4",
     "pandas>=2.0.0",
     "pyrate-limiter>=2.10.0",
     "pytrends>=4.9.2",
+    # Used implicitly by yfinance for on-disk HTTP response caching
     "requests-cache>=1.2.1",
     "requests-ratelimiter>=0.7.0",
     "tabulate>=0.9.0",
     "yfinance[nospam]>=0.2.54",
+    "httpx-caching>=0.6.0",
 ]
 authors = [
     { name = "Ferdous", email = "ferdous@hey.com" }
