--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,9 @@ requires-python = ">=3.12"
 dependencies = [
     "beautifulsoup4>=4.13.4",
     "hishel>=0.1.3",
+    "html5lib>=1.1",
     "httpx>=0.28.1",
+    "lxml>=6.0.0",
     "mcp[cli]>=1.9.4",
     "pandas>=2.0.0",
     "pyrate-limiter>=2.10.0",
@@ -32,6 +34,9 @@ classifiers = [
 
 [project.optional-dependencies]
 ta = ["ta-lib>=0.6.3"]
+playwright = [
+    "playwright>=1.54.0",
+]
 
 [project.scripts]
 investor-agent = "investor_agent.server:mcp.run"
